@@ -99,8 +99,9 @@ input.search.start, input.search.cancel {
 
 .search.result.entry .icon {
 	float: none;
-	vertical-align: text-bottom;
+	vertical-align: middle;
 	margin: 1px;
+	padding-right: 10px;
 }
 .search.result.entry.duplicates {
 	background-color: #ffaaaa;
@@ -127,4 +128,7 @@ input.search.start, input.search.cancel {
 	background-repeat: no-repeat;
 	background-position: left center;
 	padding-left: 20px;
+}
+.search-size, .search-timecomparator {
+	width: 5em;
 }
